fixed notifications not showing for new season and tooltip display fixed

--- a/rendered/stylesheets/style.css
+++ b/rendered/stylesheets/style.css
@@ -970,3 +970,9 @@ input[type="color"]::-webkit-color-swatch {
 #notifications_container::-webkit-scrollbar-track{
   margin-top: 0;
 }
+#appVersion{
+  position: absolute;
+  bottom: 80px;
+  left: 10px;
+  color: var(--secTextCol);
+}
